--- a/enterprise_equipment_activs_server/docker-compose.yml
+++ b/enterprise_equipment_activs_server/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   db:
     image: postgres:9.6-alpine
     environment:
-      POSTGRES_DB: "train_react_development"
+      POSTGRES_DB: "enterprise_equipment_activs_dev_db"
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: root
     volumes:
